<resources>
    <string name="app_name">HighlightPro</string>
    <string name="highlight_sample_more">Highlight Sample More Steps</string>
    <string name="highlight_sample">Highlight Sample</string>
    <string name="popup_window">Popup Window Sample</string>
    <string name="recycler_view_sample">RecyclerView Sample</string>
    <string name="dialog_sample">Dialog Sample</string>
    <string name="hello_world">Hello World</string>
    <string name="constraints_horizontal">Constraints Horizontal</string>
    <string name="constraints_start_to_start">Sta to Sta</string>
    <string name="constraints_start_to_end">Sta to End</string>
    <string name="constraints_end_to_end">End to End</string>
    <string name="constrains_end_to_start">End to Sta</string>
    <string name="constraints_vertical">Constraints Vertical</string>
    <string name="constraints_top_to_top">Top to Top</string>
    <string name="constraints_top_to_bottom">Top to Btm</string>
    <string name="constraints_bottom_to_bottom">Btm to Btm</string>
    <string name="constraints_bottom_to_top">Btm to Top</string>
    <string name="constraints_center_vertical">Center Vertical</string>
    <string name="constraints_center_horizontal">Center Horizontal</string>
    <string name="show_highlight">Show Highlight</string>
    <string name="im_here">I\'m here!!</string>
    <string name="click_here_to_next_step">Click here to next step</string>
    <string name="im_here_multi_line">I\'m here!!\nI\'m here!!\nI\'m here!!\nI\'m here!!</string>
    <string name="click_show_popup_window_des_bottom">Click right icon show popup window bottom</string>
    <string name="click_show_popup_window_des_top">Click right icon show popup window top</string>
    <string name="click_show_popup_window_des_left">Click right icon show popup window left</string>
    <string name="click_show_popup_window_des_right">Click right icon show popup window right</string>
    <string name="step_first">First Step</string>
    <string name="step_second">Second Step</string>
    <string name="step_third">Third Step</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="highlight_one">Highlight One</string>
    <string name="highlight_two">Highlight Two</string>
    <string name="click_item_show_highlight">Clicked item show highlight</string>
</resources>