<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.highlight.HighlightGuideFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_show_popup_window_des_bottom"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:lines="2"
        android:gravity="center"
        android:text="@string/click_show_popup_window_des_bottom"
        app:layout_constraintEnd_toStartOf="@+id/btn_tips_bottom"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_show_popup_window_des_top"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_show_popup_window_des_top"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:lines="2"
        android:gravity="center"
        android:text="@string/click_show_popup_window_des_top"
        app:layout_constraintEnd_toStartOf="@+id/btn_tips_top"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_show_popup_window_des_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_popup_window_des_bottom" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_show_popup_window_des_left"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:lines="2"
        android:gravity="center"
        android:text="@string/click_show_popup_window_des_left"
        app:layout_constraintEnd_toStartOf="@+id/btn_tips_left"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_popup_window_des_top"
        app:layout_constraintBottom_toTopOf="@+id/tv_show_popup_window_des_right"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_show_popup_window_des_right"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:lines="2"
        android:gravity="center"
        android:text="@string/click_show_popup_window_des_right"
        app:layout_constraintEnd_toStartOf="@+id/btn_tips_right"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_popup_window_des_left"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_tips_bottom"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="4dp"
        android:src="@drawable/ic_outline_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_popup_window_des_bottom"
        app:layout_constraintStart_toEndOf="@+id/tv_show_popup_window_des_bottom"
        app:layout_constraintTop_toTopOf="@+id/tv_show_popup_window_des_bottom" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_tips_top"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="4dp"
        android:src="@drawable/ic_outline_info"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_popup_window_des_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_show_popup_window_des_top"
        app:layout_constraintTop_toTopOf="@+id/tv_show_popup_window_des_top" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_tips_left"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="4dp"
        android:src="@drawable/ic_outline_info"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_popup_window_des_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_show_popup_window_des_left"
        app:layout_constraintTop_toTopOf="@+id/tv_show_popup_window_des_left" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_tips_right"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="4dp"
        android:src="@drawable/ic_outline_info"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_popup_window_des_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_show_popup_window_des_right"
        app:layout_constraintTop_toTopOf="@+id/tv_show_popup_window_des_right" />

</androidx.constraintlayout.widget.ConstraintLayout>